--- a/HW(Les20 - canvas)/css/style.css
+++ b/HW(Les20 - canvas)/css/style.css
@@ -6,14 +6,15 @@
 
 .container {
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
+    margin: 20px;
 }
 canvas {
     outline: 2px solid black;
     background-image: url("../media/Image20250228115053.png");
 }
 
-.btn i {
+.mov i, .figure i {
     font-size: 48px;
     padding: 10px;
     margin: 10px;
